# infra-bot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
deploy/config/: config.example.yaml
deploy/systemd/: infra-bot-reboot.service  infra-bot-update.service  infra-bot-update.timer  infra-bot.service
infra_bot/: __init__.py  bot.py  cli.py  commands.py  config.py  notifiers.py  reboot.py  slack.py  state.py  telegram.py  updater.py
scripts/: bootstrap-install.sh  get-infra-bot.sh  install.sh
scripts/lib/: common.sh
tests/: test_bot.py  test_commands.py  test_config.py  test_install_script.py  test_slack.py  test_state.py  test_telegram.py  test_updater.py
